part1 mpi seems to be working thought not more efficiently than serialy

--- a/ece677hwk2/Makefile
+++ b/ece677hwk2/Makefile
@@ -1,7 +1,7 @@
 
 
 
-all: part1_serial part1_omp part2_serial part2_omp
+all: part1_serial part1_omp part1_mpi part2_serial part2_omp
 
 part1_serial: hwk2part1_serial.cpp
 	g++ hwk2part1_serial.cpp -o p1s
@@ -9,10 +9,11 @@ part1_serial: hwk2part1_serial.cpp
 part1_omp: hwk2part1_omp.cpp
 	g++ -fopenmp hwk2part1_omp.cpp -o p1o
 
+part1_mpi: hwk2part1_mpi.cpp
+	mpic++ hwk2part1_mpi.cpp -o p1mpi
 
 part2_serial: hwk2part2_serial.cpp
 	g++ hwk2part2_serial.cpp -o p2s
-
 
 
 part2_omp: hwk2part2_omp.cpp
